<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/action_Lightning"
        android:enabled="true"
        android:icon="@drawable/lightning"
        android:title="@string/Lightning" />
    <item
        android:id="@+id/action_gps"
        android:enabled="true"
        android:icon="@drawable/gps"
        android:title="@string/gps" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/account"
        android:title="@string/account" />

    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:icon="@drawable/more"
        android:title="@string/more" />
</menu>